--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -471,6 +471,10 @@ header .nav-search-panel input {
   width: auto;
 }
 
+.cart-mini-cart .cart-empty-cart__actions a {
+  width: auto;
+}
+
 /* If viewport height is below max, set max height to 90% of viewport */
 @media (height < 820px) {
   .cart-mini-cart:not(:has(.cart-empty-cart)) {
