--- a/blocks/adventure-details/adventure-details.css
+++ b/blocks/adventure-details/adventure-details.css
@@ -30,23 +30,22 @@
 }
 
 .elsie-base-design .pdp-product__quantity {
-  grid-column: 1 / span 1;
+  grid-column: 1 / span 2;
+}
+
+.elsie-base-design .elsie-incrementer.pdp-product__quantity {
+  max-width: 175px;
 }
 
 .elsie-base-design .pdp-product__buttons {
   display: flex;
   flex-wrap: wrap;
   grid-gap: 1.5rem 0;
+  justify-content: center;
 }
 
 .elsie-base-design .pdp-product__buttons button:nth-of-type(1) {
   flex-basis: 100%;
-}
-
-.elsie-base-design .pdp-product__buttons button:nth-of-type(2),
-.elsie-base-design .pdp-product__buttons button:nth-of-type(3) {
-  flex-basis: 50%;
-  flex-grow: 0;
 }
 
 .elsie-base-design .elsie-button--primary,
