--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -23,7 +23,7 @@
 
 .cards .card-image img {
   width: 100%;
-  height: 100%;
+  height: auto;
   display: block;
   min-height: 124px;
   object-fit: cover;
