--- a/blocks/product-details/product-details.css
+++ b/blocks/product-details/product-details.css
@@ -47,7 +47,11 @@
   order: 6;
 }
 
-.elsie-base-design .pdp-product__column-body .pdp-product__attributes {
+.elsie-base-design .pdp-product__column-body .pdp-product__short_description {
   order: 5;
+}
+
+.elsie-base-design .pdp-product__column-body .pdp-product__attributes {
+  order: 4;
   margin: 0;
 }
