--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -260,7 +260,7 @@ header nav .nav-sections ul > li > a {
 header nav .nav-sections ul > li > a.active,
 header nav .nav-sections ul > li > a:hover {
   text-decoration: none;
-  background-color: var( --color-brand-theme-2);
+  background-color: var( --color-brand-700);
 }
 
 @media (width >= 900px) {
@@ -384,7 +384,7 @@ header nav .nav-tools .minicart-wrapper {
 
 header nav .nav-tools > button,
 header nav .nav-tools .minicart-wrapper > button {
-  color: var(--color-brand-700);
+  color: var(--color-brand-300);
   background: transparent;
   padding: 5px 10px;
   margin-left: 1em;
@@ -411,7 +411,7 @@ header nav .nav-tools button.nav-cart-button[data-count]::after {
   position: absolute;
   top: 0;
   right: 9px;
-  background-color: var(--color-brand-700);
+  background-color: var(--color-brand-300);
   color: var(--color-neutral-100);
   border-radius: 50%;
   width: 1.6em;
@@ -466,7 +466,7 @@ header .nav-search-panel input {
 }
 
 .cart-mini-cart__heading-text::after {
-  border-bottom: 2px solid var(--color-brand-theme-1);
+  border-bottom: 2px solid var(--color-brand-600);
   content: "";
   display: block;
   padding-top: 10px;
