--- a/blocks/adventure-details/adventure-details.css
+++ b/blocks/adventure-details/adventure-details.css
@@ -8,7 +8,7 @@
 .elsie-base-design .pdp-product h5:not(.pdp-product__title)::after,
 .elsie-base-design .pdp-product h6:not(.pdp-product__title)::after,
 .elsie-base-design .custom-title::after {
-  border-bottom: 2px solid var(--color-brand-theme-1);
+  border-bottom: 2px solid var(--color-brand-600);
   content: "";
   display: block;
   padding-top: 8px;
@@ -54,7 +54,7 @@
 }
 
 .elsie-base-design .pdp-carousel__button--thumbnailsColumn {
-  background: var(--color-brand-black-1);
+  background: var(--color-brand-300);
   border-radius: 0;
   padding: 0.25rem;
   position: relative;
