--- a/blocks/product-details/product-details.css
+++ b/blocks/product-details/product-details.css
@@ -18,7 +18,7 @@
 }
 
 .elsie-base-design .pdp-carousel__button--thumbnailsColumn {
-  background: var(--color-brand-black-1);
+  background: var(--color-brand-300);
   border-radius: 0;
   padding: 0.25rem;
   position: relative;
