--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,12 +14,6 @@
 
  :root,
  .elsie-base-design.elsie-base-design {
-  /* WKND Adventure Theme */
-  --color-brand-black-1: #000; /* Type 1: Black */
-  --color-brand-black-2: #202020; /* Type 2: Black */
-  --color-brand-theme-1: #FFEA00; /* Yellow */
-  --color-brand-theme-2: #F5F5F5; /* Background grey */
-
   /* Font Family  */ 
   --heading-font-family: 'Source Serif Pro', sans-serif;
   --type-base-font-family: 'Source Sans Pro', roboto, roboto-fallback, sans-serif;
@@ -40,10 +34,10 @@
   --heading-font-size-xxl: 40px;
 
   /* Elsie base design */
-  --color-brand-300: #6d6d6d;
-  --color-brand-500: #454545;
-  --color-brand-600: #383838;
-  --color-brand-700: #2b2b2b;
+  --color-brand-300: #000; /* Type 1: Black */
+  --color-brand-500: #202020; /* Type 2: Black */
+  --color-brand-600: #FFEA00; /* Yellow */
+  --color-brand-700: #F5F5F5; /* Background grey */
   --color-neutral-50: #fff;
   --color-neutral-100: #fafafa;
   --color-neutral-200: #f5f5f5;
@@ -184,7 +178,7 @@ body {
   font: var(--type-body-1-default-font);
   letter-spacing: var(--type-body-1-default-letter-spacing);
   margin: 0;
-  color: var(--color-brand-700);
+  color: var(--color-brand-300);
   background-color: var(--background-color);
   display: grid;
   grid-template-rows: auto 1fr auto;
@@ -254,7 +248,7 @@ h1,h2,h3,h4,h5,h6 {
 .section .default-content-wrapper h4::after,
 .section .default-content-wrapper h5::after,
 .section .default-content-wrapper h6::after {
-  border-bottom: 2px solid var(--color-brand-theme-1);
+  border-bottom: 2px solid var(--color-brand-600);
   content: "";
   display: block;
   padding-top: 8px;
@@ -341,10 +335,10 @@ button {
 button.button-primary,
 a.button-primary {
   display: block;
-  background-color: var(--color-brand-theme-1);
+  background-color: var(--color-brand-600);
   font-size: var(--body-font-size-m);
   font-weight: 600;
-  color: var(--color-brand-black-2);
+  color: var(--color-brand-500);
   padding: 8px 24px;
   width: fit-content;
   height: auto;
@@ -359,7 +353,7 @@ a.button-primary {
 button.button-secondary,
 a.button-secondary {
   display: block;
-  background-color: var(--color-brand-black-1);
+  background-color: var(--color-brand-300);
   font-size: var(--body-font-size-m);
   font-weight: 600;
   color: var(--color-neutral-50);
@@ -561,8 +555,8 @@ main .section.top-divider {
   border-radius: 0;
   text-transform: uppercase;
   font-weight: 900;
-  background: var(--color-brand-theme-1);
-  color: var(--color-brand-black-1);
+  background: var(--color-brand-600);
+  color: var(--color-brand-300);
 }
 
 /* Secondary Buttons */
@@ -578,12 +572,12 @@ main .section.top-divider {
   border-radius: 0;
   text-transform: uppercase;
   font-weight: 900;
-  background: var(--color-brand-black-1);
+  background: var(--color-brand-300);
   color: var(--color-neutral-50);
 }
 
 /* Disabled Buttons */
 .elsie-base-design .elsie-button:disabled {
-  background: var(--color-brand-theme-2);
+  background: var(--color-brand-700);
   color: var(--color-neutral-50);
 }
