Update destinations and forms blocks

--- a/blocks/destinations/destinations.css
+++ b/blocks/destinations/destinations.css
@@ -87,6 +87,10 @@
   text-decoration: none;
 }
 
+.destinations .card-info .custom-link:hover {
+  color: inherit;
+}
+
 .destinations .card-info .custom-link::after {
   content: ">";
   padding-left: 15px;
