--- a/blocks/header-topnav/header-topnav.css
+++ b/blocks/header-topnav/header-topnav.css
@@ -37,5 +37,5 @@
 
 .header-topnav .wrapper span {
   text-transform: uppercase;
-  font-size: var(--body-font-size-xs);
+  font-size: var(--body-font-size-xxs);
 }
