--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -71,7 +71,7 @@ main .hero-container {
 
 @media (width <= 768px) {
   .hero .hero-desc-wrapper p:first-of-type {
-    font-size: var(--body-font-size-s);
+    font-size: var(--body-font-size-xs);
   }
 }
 
