--- a/plugins/experimentation/src/preview.css
+++ b/plugins/experimentation/src/preview.css
@@ -47,7 +47,7 @@
 
 .hlx-badge > span {
   user-select: none;
-  font-size: var(--body-font-size-m);
+  font-size: var(--body-font-size-md);
 }
 
 .hlx-badge .hlx-open {
@@ -142,7 +142,7 @@
 }
 
 .hlx-popup h5 {
-  font-size: 14px;
+  font-size: var(--body-font-size-s);
 }
 
 .hlx-popup p,
