--- a/blocks/commerce-order-confirmation/commerce-order-confirmation.css
+++ b/blocks/commerce-order-confirmation/commerce-order-confirmation.css
@@ -1,20 +1,20 @@
 /* stylelint-disable */
 
-.elsie-base-design .order-confirmation-header__title {
+.dropin-design .order-confirmation-header__title {
   margin: 0 auto;
 }
 
-.elsie-base-design .order-confirmation-order-summary {
+.dropin-design .order-confirmation-order-summary {
   background: var(--color-brand-700);
   border: none;
 }
 
-.elsie-base-design .order-confirmation-order-summary__title {
+.dropin-design .order-confirmation-order-summary__title {
   margin-bottom: 1rem;
 }
 
-.elsie-base-design .order-confirmation-order-summary__title::after,
-.elsie-base-design .order-confirmation-details__title::after {
+.dropin-design .order-confirmation-order-summary__title::after,
+.dropin-design .order-confirmation-details__title::after {
   border-bottom: 2px solid var(--color-brand-600);
   content: "";
   display: block;
@@ -23,10 +23,10 @@
   width: fit-content;
 }
 
-.elsie-base-design .order-confirmation-order-summary hr {
+.dropin-design .order-confirmation-order-summary hr {
   display: none;
 }
 
-.elsie-base-design .order-confirmation-details {
+.dropin-design .order-confirmation-details {
   border: none;
 }
