--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -232,3 +232,7 @@
     max-width: 100%;
   }
 }
+
+.form.email-subscription .form-info p:first-of-type {
+  font-size: var(--heading-font-size-s);
+}
