--- a/styles/styles.css
+++ b/styles/styles.css
@@ -472,14 +472,14 @@ main .section.top-divider {
   border-top:  1px solid var(--color-neutral-300);
 }
 
-main .section.section-title .default-content-wrapper > p {
+main .section.section-title .default-content-wrapper:first-of-type p {
   margin: 0;
   width: fit-content;
   font: var(--type-headline-2-strong-font);
   letter-spacing: var(--type-headline-2-strong-letter-spacing);
 }
 
-main .section.section-title .default-content-wrapper > p::after {
+main .section.section-title .default-content-wrapper:first-of-type p::after {
   border-bottom: 2px solid var(--color-brand-600);
   content: "";
   display: block;
