--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -265,7 +265,7 @@ header nav .nav-sections ul > li > a {
 header nav .nav-sections ul > li > a.active,
 header nav .nav-sections ul > li > a:hover {
   text-decoration: none;
-  background-color: var( --color-brand-700);
+  background-color: var(--color-neutral-200);
 }
 
 @media (width >= 900px) {
@@ -416,7 +416,7 @@ header nav .nav-tools button.nav-cart-button[data-count]::after {
   position: absolute;
   top: 0;
   right: 0;
-  background-color: var(--color-brand-300);
+  background-color: var(--color-black-100);
   color: var(--color-neutral-100);
   border-radius: 50%;
   width: 1.6em;
@@ -491,6 +491,10 @@ header .nav-search-panel input {
 
 .cart-mini-cart .cart-empty-cart__actions a {
   width: auto;
+}
+
+.cart-mini-cart .dropin-cart-item__remove {
+  color: var(--color-black-100);
 }
 
 header .nav-search-button:focus,
