--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,13 +35,18 @@
   --heading-font-size-xxl: 40px;
 
   /* Elsie base design */
-  --color-brand-300: #000; /* Type 1: Black */
-  --color-brand-500: #202020; /* Type 2: Black */
-  --color-brand-600: #FFEA00; /* Yellow */
-  --color-brand-700: #F5F5F5; /* Background grey */
+  --color-brand-300: #F5E96D; 
+  --color-brand-500: #FFEA00; /* Main */
+  --color-brand-600: #FFE600; 
+  --color-brand-700: #F7D522; 
+
+
+  --color-black-100: #000; /* Type 1: Black */
+  --color-black-200: #202020; /* Type 2: Black */
+
   --color-neutral-50: #fff;
   --color-neutral-100: #fafafa;
-  --color-neutral-200: #f5f5f5;
+  --color-neutral-200: #f5f5f5; /* grey backround */
   --color-neutral-300: #e8e8e8;
   --color-neutral-400: #d6d6d6;
   --color-neutral-500: #b8b8b8;
@@ -179,7 +184,7 @@ body {
   font: var(--type-body-1-default-font);
   letter-spacing: var(--type-body-1-default-letter-spacing);
   margin: 0;
-  color: var(--color-brand-300);
+  color: var(--color-black-100);
   background-color: var(--background-color);
   display: grid;
   grid-template-rows: auto 1fr auto;
@@ -249,7 +254,7 @@ h1,h2,h3,h4,h5,h6 {
 .section .default-content-wrapper h4::after,
 .section .default-content-wrapper h5::after,
 .section .default-content-wrapper h6::after {
-  border-bottom: 2px solid var(--color-brand-600);
+  border-bottom: 2px solid var(--color-brand-500);
   content: "";
   display: block;
   padding-top: 8px;
@@ -301,7 +306,7 @@ main pre {
 
 /* links */
 a:any-link {
-  color: var(--color-brand-500);
+  color: var(--color-black-100);
   font: var(--type-body-1-strong-font);
   letter-spacing: var(--type-body-1-strong-letter-spacing);
   text-decoration: none;
@@ -336,10 +341,10 @@ button {
 button.button-primary,
 a.button-primary {
   display: block;
-  background-color: var(--color-brand-600);
+  background-color: var(--color-brand-500);
   font-size: var(--body-font-size-md);
   font-weight: 600;
-  color: var(--color-brand-500);
+  color: var(--color-black-100);
   padding: 8px 24px;
   width: fit-content;
   height: auto;
@@ -351,10 +356,21 @@ a.button-primary {
   text-transform: uppercase;
 }
 
+button.button-primary:hover,
+a.button-primary:hover {
+  background-color: var(--color-brand-600);
+}
+
+button.button-primary:active,
+a.button-primary:active {
+  background-color: var(--color-brand-700);
+}
+
+
 button.button-secondary,
 a.button-secondary {
   display: block;
-  background-color: var(--color-brand-300);
+  background-color: var(--color-black-100);
   font-size: var(--body-font-size-md);
   font-weight: 600;
   color: var(--color-neutral-50);
@@ -573,8 +589,8 @@ main .section.section-title .default-content-wrapper:first-of-type p::after {
   border-radius: 0;
   text-transform: uppercase;
   font-weight: 900;
-  background: var(--color-brand-600);
-  color: var(--color-brand-300);
+  background: var(--color-brand-500);
+  color: var(--color-brand-100);
 }
 
 /* Secondary Buttons */
@@ -590,12 +606,12 @@ main .section.section-title .default-content-wrapper:first-of-type p::after {
   border-radius: 0;
   text-transform: uppercase;
   font-weight: 900;
-  background: var(--color-brand-300);
+  background: var(--color-brand-100);
   color: var(--color-neutral-50);
 }
 
 /* Disabled Buttons */
 .dropin-design .dropin-button:disabled {
-  background: var(--color-brand-700);
+  background: var(--color-neutral-200);
   color: var(--color-neutral-50);
 }
