--- a/blocks/destinations/destinations.css
+++ b/blocks/destinations/destinations.css
@@ -85,6 +85,7 @@
 
 .destinations .card-info .custom-link {
   text-decoration: none;
+  font-weight: 600;
 }
 
 .destinations .card-info .custom-link:hover {
