--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -436,6 +436,7 @@ header nav .nav-tools button.nav-search-button {
   background-size: 20px;
   padding: 5px 15px;
   margin: 1rem;
+  height: 34px;
 }
 
 header nav .nav-tools button.nav-search-button:hover,
@@ -487,6 +488,14 @@ header .nav-search-panel input {
 .cart-mini-cart .cart-mini-cart__footer__ctas a {
   font-size: var(--body-font-size-md);
   width: auto;
+}
+
+.cart-mini-cart .cart-mini-cart__footer__ctas a.dropin-button--primary:hover {
+  background-color: var(--color-brand-600);
+}
+
+.cart-mini-cart .cart-mini-cart__footer__ctas a.dropin-button--primary:active {
+  background-color: var(--color-brand-700);
 }
 
 .cart-mini-cart .cart-empty-cart__actions a {
