--- a/blocks/commerce-order-confirmation/commerce-order-confirmation.css
+++ b/blocks/commerce-order-confirmation/commerce-order-confirmation.css
@@ -5,7 +5,7 @@
 }
 
 .dropin-design .order-confirmation-order-summary {
-  background: var(--color-brand-700);
+  background: var(--color-neutral-200);
   border: none;
 }
 
@@ -15,7 +15,7 @@
 
 .dropin-design .order-confirmation-order-summary__title::after,
 .dropin-design .order-confirmation-details__title::after {
-  border-bottom: 2px solid var(--color-brand-600);
+  border-bottom: 2px solid var(--color-brand-500);
   content: "";
   display: block;
   padding-top: 8px;
