Resolve eslint errors

--- a/blocks/product-list-page/product-list-page.css
+++ b/blocks/product-list-page/product-list-page.css
@@ -47,7 +47,7 @@
 
 .product-list-page .ds-sdk-product-item:hover {
   border: 1px solid var(--color-neutral-300);
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px rgba(0 0 0 / 10%);
 }
 
 .product-list-page .ds-sdk-product-item:hover img {
