Fix line height

--- a/blocks/beat-the-buzzer-banner/beat-the-buzzer-banner.css
+++ b/blocks/beat-the-buzzer-banner/beat-the-buzzer-banner.css
@@ -28,6 +28,7 @@
 @media (width < 768px) {
   .beat-the-buzzer-banner .banner-container .content {
     font-size: var(--body-font-size-xl);
+    line-height: normal;
   } 
 }
 
