--- a/blocks/beat-the-buzzer-banner/beat-the-buzzer-banner.css
+++ b/blocks/beat-the-buzzer-banner/beat-the-buzzer-banner.css
@@ -1,16 +1,10 @@
 .beat-the-buzzer-banner .banner-container {
-  padding: 5rem 13rem;
+  padding: 5rem 10.5rem;
   min-height: 300px;
   background: linear-gradient(260deg, rgba(0, 0, 0, 1) 93%, rgba(255, 230, 0, 1) 93%);
   display: flex;
   align-items: center;
   box-sizing: border-box;
-}
-
-@media (width < 1024px) {
-  .beat-the-buzzer-banner .banner-container {
-    padding: 5rem 10rem;
-  } 
 }
 
 @media (width < 768px) {
@@ -20,14 +14,14 @@
   } 
 }
 
-.beat-the-buzzer-banner .banner-container .content {
+.beat-the-buzzer-banner .banner-container .content > * {
   line-height: normal;
   color: var(--color-neutral-50);
   font-size: 45px;
 }
 
 @media (width < 768px) {
-  .beat-the-buzzer-banner .banner-container .content {
+  .beat-the-buzzer-banner .banner-container .content > * {
     font-size: var(--body-font-size-xl);
   } 
 }
