--- a/styles/styles.css
+++ b/styles/styles.css
@@ -501,6 +501,38 @@ main .section.section-title .default-content-wrapper:first-of-type p::after {
   width: fit-content;
 }
 
+/* Breadcrumb */
+.breadcrumb-container {
+  max-width: var(--large-grid-layout);
+  margin: 0 auto;
+  padding: 4rem 0 1rem;
+  box-sizing: border-box;
+}
+
+.breadcrumb-container,
+.breadcrumb-container a,
+.breadcrumb-container span {
+  font-size: var( --body-font-size-xxs);
+  text-transform: uppercase;
+}
+
+.breadcrumb-container a,
+.breadcrumb-container span {
+  padding: 0.5rem;
+  line-height: 21px;
+  letter-spacing: 0.16em;
+}
+
+.breadcrumb-container a:hover {
+  color: var(--color-neutral-900);
+  text-decoration: solid underline var(--color-neutral-900);
+}
+
+@media (width <= 768px) {
+  .breadcrumb-container {
+    padding: 1rem;
+  }
+}
 
 /* Accordion */
 .accordion details summary {
