Add check for experiments in sku functions

--- a/blocks/adventure-details/adventure-details.css
+++ b/blocks/adventure-details/adventure-details.css
@@ -50,7 +50,7 @@
 .dropin-design .pdp-product__buttons {
   display: flex;
   flex-wrap: wrap;
-  grid-gap: 1.5rem 0;
+  grid-gap: 1.5rem 1rem;
   justify-content: center;
 }
 
