Update grid in pdp

--- a/blocks/product-details/product-details.css
+++ b/blocks/product-details/product-details.css
@@ -55,3 +55,8 @@
   order: 4;
   margin: 0;
 }
+
+.dropin-design .pdp-carousel__controls__container--thumbnailsRow {
+  justify-content: center;
+  align-items: center;
+}
