--- a/templates/adventures/adventures.css
+++ b/templates/adventures/adventures.css
@@ -1,6 +1,7 @@
 .adventures main {
   max-width: var(--large-grid-layout);
   margin: 105px auto 0;
+  min-height: 900px;
 }
 
 @media (width < 768px) {
